libs/@local/hashql/ast/tests/ui/lowering/import-resolver/generic-argument-use-path.jsonc
//@ run: fail
//@ description: Generic arguments in the use path should
["use", "kernel::type<T>", { "#tuple": ["T"] }, "_"]
//~^ ERROR Generic arguments are not allowed here
